Fixed vertical scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ aside {
 }
 html,
 body {
-	height: 100vh;
+	height: 100dvh;
 	width: 100%;
 	font-size: 100%;
 	line-height: 1;
@@ -95,7 +95,7 @@ body {
 .container {
 	width: 100%;
 	max-width: 500px;
-	min-height: 100vh;
+	min-height: 100dvh;
 	padding: 50px 10px;
 	display: flex;
 	flex-direction: column;
